# machine-emulator-tools

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  Dockerfile  Makefile  README.md  control.in  copyright  package.json.in  postinst  shasumfile
.github/workflows/: main.yml
example/: README.md  build  img-pack  ubuntu-22.04.dockerfile
fs/: .dockerignore  Dockerfile  dhrystone.patch  rootfs-hv-guest.Dockerfile  rootfs-hv-host.Dockerfile  rootfs.Dockerfile  shasumfile
linux/dehash/: .gitignore  Makefile  dehash.c
linux/htif/: .gitignore  Makefile  htif.c  yield.c
linux/htif/extra/: yield-test
linux/libcmt/: .gitignore  Makefile  README.md
linux/libcmt/doc/: Doxyfile
linux/libcmt/examples/: abi_decode_000.c  abi_decode_001.c  abi_encode_000.c  abi_encode_001.c  abi_encode_002.c  abi_get.c  abi_multi.c  merkle-state.c  rollup-driver.c  rollup.c  yield-driver.c
linux/libcmt/include/libcmt/: abi.h  buf.h  keccak.h  merkle.h  rollup-driver-api.h  rollup.h  yield-driver-api.h
linux/libcmt/include/libcmt/ioctl/: rollup-driver.h  yield-driver.h
linux/libcmt/include/libcmt/mock/: rollup-driver.h  yield-driver.h
linux/libcmt/src/: abi.c  buf.c  keccak.c  merkle.c  rollup.c
linux/libcmt/src/ioctl/: rollup-driver.c  yield-driver.c
linux/libcmt/src/mock/: rollup-driver.c  yield-driver.c
linux/libcmt/tests/: abi.c  keccak.c  merkle.c
linux/libcmt/tools/: funsel.c  merkle-table.c
linux/libcmt/tools/templates/: libcmt.pc  libcmt_mock.pc
linux/libevm/: .gitignore  Makefile  README.md  abi.h  buf.h  keccak.h  merkle.h  rollup.h
linux/libevm/doc/: Doxyfile
linux/libevm/examples/: abi.c  abi_get.c  abi_put.c
linux/rollup/: Makefile  echo.c
linux/rollup/http/echo-dapp/: Cargo.toml  README.md  build.sh  environment.sh  rv64gc-cartesi-linux-gnu.json
linux/rollup/http/echo-dapp/src/: config.rs  controller.rs  http_dispatcher.rs  http_service.rs  main.rs  model.rs  rollup.rs  rollup_http_server.rs
linux/rollup/http/echo-dapp/src/rollup-http-client/: rollup.rs
linux/rollup/http/http-dispatcher/: Cargo.toml  README.md  riscv64ima-unknown-linux-gnu.json
linux/rollup/http/http-dispatcher/src/: config.rs  echo.rs  http_service.rs  lib.rs  main.rs
linux/rollup/http/http-dispatcher/src/rollup/: bindings.c  bindings.h  bindings.rs  mod.rs
linux/rollup/http/rollup-http-client/: Cargo.toml
linux/rollup/http/rollup-http-client/src/: client.rs  rollup.rs
linux/rollup/http/rollup-http-server/: Cargo.toml  README.md  build.rs  build.sh  environment.sh
linux/rollup/http/rollup-http-server/src/: config.rs  dapp_process.rs  http_service.rs  lib.rs  main.rs
linux/rollup/http/rollup-http-server/src/rollup/: bindings.c  bindings.h  bindings.rs  mod.rs
linux/rollup/http/rollup-http-server/tests/: rollup-http-server-tests.rs  rollup_test_bindings.c  rollup_test_bindings.h
linux/rollup/http/target-proxy/: Cargo.toml  build.rs
linux/rollup/http/target-proxy/src/: config.rs  echo.rs  http_service.rs  main.rs
linux/rollup/http/target-proxy/src/rollup/: bindings.c  bindings.h  bindings.rs  mod.rs
linux/rollup/ioctl-echo-loop/: Makefile  ioctl-echo-loop.c
linux/rollup/rollup/: Makefile  rollup.cpp
linux/utils/: flashdrive  readbe64  rollup-init  writebe64
linux/xhalt/: Makefile
rollup-http/: Makefile
rollup-http/.cargo/: config.toml
rollup-http/echo-dapp/: Cargo.toml  README.md  build-with-toolchain.sh
rollup-http/echo-dapp/src/: config.rs  main.rs
rollup-http/rollup-http-client/: Cargo.toml
rollup-http/rollup-http-client/src/: client.rs  lib.rs  rollup.rs
rollup-http/rollup-http-server/: Cargo.toml  README.md  build-with-toolchain.sh  build.rs
rollup-http/rollup-http-server/src/: config.rs  dapp_process.rs  http_service.rs  main.rs
rollup-http/rollup-http-server/src/rollup/: bindings.c  bindings.h  bindings.rs  mod.rs  wrapper.h
rollup-http/rollup-http-server/tests/: rollup-http-server-tests.rs  rollup_test_bindings.h
rollup-http/rollup-init/: rollup-init
skel/opt/cartesi/etc/: motd
skel/opt/cartesi/var/run/: random-seed
skel/sbin/: init
sys-utils/: Makefile
sys-utils/cartesi-init/: Makefile  cartesi-init
sys-utils/hex/: Makefile  README.md  hex.cpp
sys-utils/ioctl-echo-loop/: Makefile  ioctl-echo-loop.c
sys-utils/libcmt/: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  hook.lua  meson.build  riscv64.ini
sys-utils/libcmt/doc/: Doxyfile  DoxygenLayout.xml
sys-utils/libcmt/doc/examples/: abi_decode_000.c  abi_decode_001.c  abi_decode_002.c  abi_encode_000.c  abi_encode_001.c  abi_encode_002.c  abi_multi.c  io.c  rollup.c
sys-utils/libcmt/include/libcmt/: abi.h  io.h  keccak.h  merkle.h  rollup.h  sock.h
sys-utils/libcmt/src/: abi.c  abi.h  buf.c  buf.h  io-host.c  io-mock.c  io.c  io.h  keccak.c  keccak.h  libcmt-host-sample.c  merkle-table.c  merkle.c  merkle.h  rollup.c  rollup.h  sock.c  util.c  util.h
sys-utils/libcmt/src/ioctl/: io.c
sys-utils/libcmt/src/mock/: hook.c  io.c
sys-utils/libcmt/src/tests/: abi-multi.c  abi-single.c  dehash.c  io_echo.c  io_exception.c  keccak.c  merkle.c  rollup_echo.c
sys-utils/libcmt/src/tools/: funsel.c  merkle-table.c
sys-utils/libcmt/tests/: abi-multi.c  abi-single.c  buf.c  create-data.sh  data.h  gio.c  io.c  io_echo.c  io_exception.c  keccak.c  merkle.c  progress.c  rollup.c  rollup_echo.c
sys-utils/libcmt/tools/: control.in  funsel.c  libcmt.pc.in  prepare-ffi.sh  version.sh
sys-utils/libcmt/tools/template/: cross-control.template
sys-utils/libcmt/tools/templates/: libcmt.pc
sys-utils/misc/: Makefile  flashdrive  readbe64
sys-utils/rollup/: Makefile  json.hpp  rollup.cpp
sys-utils/xhalt/: Makefile  README.md  xhalt.c
sys-utils/yield/: .gitignore  Makefile  README.md  yield.c
tools/template/: control.template
