[package]
name = "echo-dapp"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>", "Marko Atnasievski <marko.atanasievski@cartesi.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
actix-web = "4.0.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.14", features = ["macros", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
getopts = "0.2"
hex = "0.4"
rollup-http-client = { path = "../rollup-http-client"}


[profile.release]
lto = true          # Enable Link Time Optimization
opt-level = "z"     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations, but slower build
# panic = "abort"     # Abort on panic
