[package]
name = "echo-dapp"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.14", features = ["macros", "sync", "rt-multi-thread"] }
reqwest = { version = "0.11.7", features = ["json"]  }
getopts = "0.2.21"
