cargo-features = ["strip"]

[package]
name = "http-dispatcher"
version = "0.1.0"
edition = "2021"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]

[lib]
name = "http_dispatcher"
path = "src/lib.rs"

[[bin]]
name = "http-dispatcher"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"
libc = "0.2.108"
actix-web = "4.0.0-beta.11"
serde = { vesion = "1.0.130", features = ["derive"]}
serde_json = "1.0"
log = "0.4.14"
tokio = { version = "1.14", features = ["macros", "time", "rt-multi-thread"] }
env_logger = "0.9"
async-mutex = "1.4.0"
hyper = { version = "0.14.15", features = ["http1", "runtime", "client"] }
hex = "0.4.3"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.72"
tonic-build = "0.5"


[profile.release]
strip = true
lto = true          # Enable Link Time Optimization
opt-level = "z"     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations, but slower build
# panic = "abort"     # Abort on panic