cargo-features = ["strip"]

[package]
name = "rollup-http-server"
version = "0.1.0"
edition = "2021"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]

[lib]
name = "rollup_http_server"
path = "src/lib.rs"

[[bin]]
name = "rollup-http-server"
path = "src/main.rs"

[dependencies]
getopts = "0.2"
libc = "0.2"
actix-web = "4.0.0-rc.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.14", features = ["macros", "time", "rt-multi-thread"] }
env_logger = "0.9"
async-mutex = "1.4"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
hex = "0.4"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
tonic-build = "0.5"


[profile.release]
strip = true
lto = true          # Enable Link Time Optimization
opt-level = "z"     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations, but slower build
# panic = "abort"     # Abort on panic
